--- a/client/src/assets/styles/_navbar.scss
+++ b/client/src/assets/styles/_navbar.scss
@@ -46,10 +46,16 @@
     &--logo {
       display: flex;
       justify-content: flex-start;
-      padding: 30px 32px 35px 32px;
+      padding: 25px 32px 30px 30px;
 
       @include media-breakpoint-down(md) {
         display: none;
+      }
+
+      a {
+        img {
+          width: 85%;
+        }
       }
     }
 
@@ -103,34 +109,38 @@
       .menu-top {
         .dashboard {
           &:before {
-            content: url("../../images/icons/dashboard.svg");
+            content: url("../../images/icons/dashboard-dark.svg");
             width: 29px;
             height: 26px;
             margin-right: 13px;
+            padding: 0;
           }
         }
         .add-new {
           &:before {
-            content: url("../../images/icons/add-new.svg");
+            content: url("../../images/icons/add-new-dark.svg");
             width: 28px;
             height: 33px;
             margin-right: 13px;
+            padding: 0;
           }
         }
         .calendar {
           &:before {
-            content: url("../../images/icons/calendar.svg");
+            content: url("../../images/icons/calendar-dark.svg");
             width: 28px;
             height: 27px;
             margin-right: 13px;
+            padding: 0;
           }
         }
         .exams {
           &:before {
-            content: url("../../images/icons/exams.svg");
+            content: url("../../images/icons/exams-dark.svg");
             width: 27px;
             height: 31px;
             margin-right: 13px;
+            padding: 0;
           }
         }
         .profile {
